--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start-server": "node server.js",
+    "start-frontend": "cd react-frontend && npm run dev",
     "build": "npm install"
   },
   "keywords": [],
@@ -13,11 +14,11 @@
   "license": "MIT",
   "type": "commonjs",
   "dependencies": {
-    "axios": "^1.9.0",
-    "express": "^5.1.0",
-    "multer": "^2.0.1",
-    "node-cache": "^5.1.2",
-    "sqlite3": "^5.1.7",
-    "xml2js": "^0.6.2"
+    "axios": "1.12.0",
+    "express": "5.1.0",
+    "multer": "2.0.2",
+    "node-cache": "5.1.2",
+    "sqlite3": "5.1.7",
+    "xml2js": "0.6.2"
   }
 }
