--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "1.12.0",
+    "axios-retry": "^4.5.0",
     "express": "5.1.0",
     "multer": "2.0.2",
     "node-cache": "5.1.2",
