--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node server/server.cjs"
+    "start": "ts-node server/server.ts"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.2",
+    "@types/express": "^5.0.3",
     "axios": "1.12.0",
     "axios-retry": "^4.5.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
-    "express": "5.1.0",
+    "express": "^5.1.0",
     "hls.js": "^1.6.12",
     "multer": "2.0.2",
     "node-cache": "5.1.2",
@@ -25,12 +26,16 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "sqlite3": "5.1.7",
+    "ts-node": "^10.9.2",
     "xml2js": "0.6.2"
   },
   "devDependencies": {
     "@eslint/js": "9.33.0",
+    "@types/cors": "^2.8.19",
+    "@types/multer": "^2.0.0",
     "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7",
+    "@types/xml2js": "^0.4.14",
     "@vitejs/plugin-react": "5.0.0",
     "eslint": "9.33.0",
     "eslint-plugin-react-hooks": "5.2.0",
