--- a/server/package.json
+++ b/server/package.json
@@ -1,3 +1,9 @@
 {
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "pino": "^9.12.0"
+  },
+  "devDependencies": {
+    "pino-pretty": "^13.1.1"
+  }
 }
