--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-router-dom": "^7.9.1",
     "sqlite3": "5.1.7",
     "ts-node": "^10.9.2",
-    "xml2js": "0.6.2"
+    "xml2js": "0.6.2",
+    "pino": "^9.12.0"
   },
   "devDependencies": {
     "@eslint/js": "9.33.0",
@@ -44,7 +45,8 @@
     "globals": "16.3.0",
     "typescript": "5.8.3",
     "typescript-eslint": "8.39.1",
-    "vite": "7.1.6"
+    "vite": "7.1.6",
+    "pino-pretty": "^13.1.1"
   },
   "overrides": {
     "@rollup/rollup-android-arm64": "4.45.1"
