--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,3 @@
 {
-  "type": "commonjs",
-  "dependencies": {
-    "pino": "^9.12.0"
-  },
-  "devDependencies": {
-    "pino-pretty": "^13.1.1"
-  }
+  "type": "commonjs"
 }
