--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "hls.js": "^1.6.12",
     "multer": "2.0.2",
     "node-cache": "5.1.2",
+    "pino": "^9.12.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "sqlite3": "5.1.7",
     "ts-node": "^10.9.2",
-    "xml2js": "0.6.2",
-    "pino": "^9.12.0"
+    "uuid": "^13.0.0",
+    "xml2js": "0.6.2"
   },
   "devDependencies": {
     "@eslint/js": "9.33.0",
@@ -43,10 +44,11 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
     "globals": "16.3.0",
+    "pino-pretty": "^13.1.1",
+    "rimraf": "^6.0.1",
     "typescript": "5.8.3",
     "typescript-eslint": "8.39.1",
-    "vite": "7.1.6",
-    "pino-pretty": "^13.1.1"
+    "vite": "7.1.6"
   },
   "overrides": {
     "@rollup/rollup-android-arm64": "4.45.1"
