--- a/.github/workflows/update-release.yml
+++ b/.github/workflows/update-release.yml
@@ -39,16 +39,32 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create ZIP archive
-        run: |
-          zip -r ani-web.zip . -x ".git*" -x ".github/*"
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
-      - name: Create New Latest Release with ZIP
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build Application
+        run: npm run build
+
+      - name: Create Release Archive
+        run: |
+          mkdir -p release-package/server
+          cp -r dist release-package/
+          cp -r server/dist release-package/server/
+          cp package.json package-lock.json run.bat run.sh release-package/
+          cd release-package
+          zip -r ../ani-web.zip .
+
+      - name: Create New Latest Release
         run: |
           gh release create "latest" \
             "ani-web.zip" \
             --title "latest" \
-            --notes "Automatically built from the latest commit. Download the 'ani-web.zip' file below to run the project." \
+            --notes "Automatically built from the latest commit. Download the 'ani-web.zip' file below and run using run.bat or run.sh." \
             --target ${{ github.sha }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
