--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run build:server && vite build",
+    "build:server": "tsc -p server/tsconfig.json",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "ts-node server/server.ts"
+    "start": "node server/dist/server.js"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.2",
@@ -30,7 +31,8 @@
     "sqlite3": "5.1.7",
     "ts-node": "^10.9.2",
     "uuid": "^13.0.0",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "pino-pretty": "^13.1.1"
   },
   "devDependencies": {
     "@eslint/js": "9.33.0",
@@ -44,7 +46,6 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
     "globals": "16.3.0",
-    "pino-pretty": "^13.1.1",
     "rimraf": "^6.0.1",
     "typescript": "5.8.3",
     "typescript-eslint": "8.39.1",
