--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,8 @@
 {
   "type": "commonjs",
   "dependencies": {
-    "pino": "^9.12.0"
-  },
-  "devDependencies": {
+    "pino": "^9.12.0",
     "pino-pretty": "^13.1.1"
-  }
+  },
+  "devDependencies": {}
 }
