--- a/.github/workflows/update-release.yml
+++ b/.github/workflows/update-release.yml
@@ -55,6 +55,7 @@ jobs:
           mkdir -p release-package/server
           cp -r dist release-package/
           cp -r server/dist release-package/server/
+          cp server/package.json release-package/server/
           cp package.json package-lock.json run.bat run.sh release-package/
           cd release-package
           zip -r ../ani-web.zip .
