--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "multer": "^2.0.2",
     "node-cache": "5.1.2",
     "pino": "^9.12.0",
+    "pino-pretty": "^13.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
+    "sharp": "^0.34.4",
     "sqlite3": "5.1.7",
     "ts-node": "^10.9.2",
     "uuid": "^13.0.0",
-    "xml2js": "^0.6.2",
-    "pino-pretty": "^13.1.1"
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@eslint/js": "9.33.0",
