--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.2",
     "@types/express": "^5.0.3",
+    "@types/nprogress": "^0.2.3",
     "axios": "1.12.0",
     "axios-retry": "^4.5.0",
     "cheerio": "^1.0.0-rc.12",
@@ -23,10 +24,12 @@
     "hls.js": "^1.6.12",
     "multer": "^2.0.2",
     "node-cache": "5.1.2",
+    "nprogress": "^0.2.0",
     "pino": "^9.12.0",
     "pino-pretty": "^13.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "sharp": "^0.34.4",
