--- a/.github/workflows/update-release.yml
+++ b/.github/workflows/update-release.yml
@@ -45,7 +45,7 @@ jobs:
           node-version: '20'
 
       - name: Install Dependencies
-        run: npm install
+        run: npm ci --no-audit
 
       - name: Build Application
         run: npm run build
