--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start:dev": "node server/dist/server.js --debug"
   },
   "dependencies": {
+    "@tanstack/query-sync-storage-persister": "^5.90.7",
     "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-persist-client": "^5.90.7",
     "@types/express": "^5.0.3",
     "@types/nprogress": "^0.2.3",
     "axios": "1.12.0",
