--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,11 @@
 {
   "type": "commonjs",
   "dependencies": {
+    "cli-progress": "^3.12.0",
     "pino": "^9.12.0",
     "pino-pretty": "^13.1.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/cli-progress": "^3.11.5"
+  }
 }
