--- a/.github/workflows/update-release.yml
+++ b/.github/workflows/update-release.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci --no-audit
 
+      - name: Install Server Dependencies
+        run: npm install --prefix server
+
       - name: Build Application
         run: npm run build
 
