--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ani-web",
   "private": true,
-  "version": "1.0.2",
+  "version": "1.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -22,6 +22,7 @@
     "axios-retry": "^4.5.0",
     "cheerio": "^1.0.0-rc.12",
     "chokidar": "^4.0.3",
+    "cli-progress": "^3.12.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "hls.js": "^1.6.12",
@@ -48,6 +49,7 @@
     "@types/react-dom": "19.1.7",
     "@types/xml2js": "^0.4.14",
     "@vitejs/plugin-react": "5.0.0",
+    "@types/cli-progress": "^3.11.5",
     "eslint": "9.33.0",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
