--- a/server/package.json
+++ b/server/package.json
@@ -2,5 +2,10 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/cli-progress": "^3.11.5"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3",
+    "google-auth-library": "^10.5.0",
+    "googleapis": "^170.0.0"
   }
 }
