--- a/package.json
+++ b/package.json
@@ -1,54 +1,37 @@
 {
   "name": "ani-web",
   "private": true,
-  "version": "1.0.4",
+  "version": "1.0.5",
   "type": "module",
   "scripts": {
     "dev": "concurrently \"npm:server:dev\" \"vite\"",
-    "server:dev": "nodemon --watch 'server/**/*.ts' --exec 'ts-node' server/server.ts --dev",
+    "server:dev": "npm run dev --prefix server",
     "build": "npm run build:server && vite build",
     "build:server": "tsc -p server/tsconfig.json",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node server/dist/server.js"
+    "start": "node server/dist/server.js",
+    "postinstall": "npm install --prefix server"
   },
   "dependencies": {
     "@tanstack/query-sync-storage-persister": "^5.90.7",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-persist-client": "^5.90.7",
-    "@types/express": "^5.0.3",
     "@types/nprogress": "^0.2.3",
-    "axios": "1.12.0",
-    "axios-retry": "^4.5.0",
-    "cheerio": "^1.0.0-rc.12",
-    "chokidar": "^4.0.3",
     "cli-progress": "^3.12.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
     "hls.js": "^1.6.12",
-    "multer": "^2.0.2",
-    "node-cache": "5.1.2",
     "nprogress": "^0.2.0",
-    "pino": "^9.12.0",
-    "pino-pretty": "^13.1.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.1",
-    "sqlite3": "5.1.7",
-    "ts-node": "^10.9.2",
-    "uuid": "^13.0.0",
-    "xml2js": "^0.6.2"
+    "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
     "@eslint/js": "9.33.0",
     "@types/cli-progress": "^3.11.5",
-    "@types/cors": "^2.8.19",
-    "@types/multer": "^2.0.0",
     "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7",
-    "@types/xml2js": "^0.4.14",
     "@vitejs/plugin-react": "5.0.0",
     "baseline-browser-mapping": "^2.9.13",
     "concurrently": "^9.2.1",
@@ -56,7 +39,6 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
     "globals": "16.3.0",
-    "nodemon": "^3.1.11",
     "rimraf": "^6.0.1",
     "typescript": "5.8.3",
     "typescript-eslint": "8.39.1",
