--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,37 @@
 {
+  "name": "ani-web-server",
+  "version": "1.0.5",
   "type": "commonjs",
+  "scripts": {
+    "start": "node dist/server.js",
+    "dev": "nodemon --watch '**/*.ts' --exec 'ts-node' server.ts --dev"
+  },
   "dependencies": {
-    "express": "^5.1.0",
+    "axios": "^1.12.0",
+    "axios-retry": "^4.5.0",
+    "cheerio": "^1.0.0-rc.12",
+    "chokidar": "^4.0.3",
     "cors": "^2.8.5",
-    "multer": "^2.0.2",
     "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "google-auth-library": "^10.5.0",
-    "googleapis": "^170.0.0"
+    "googleapis": "^170.0.0",
+    "multer": "^2.0.2",
+    "node-cache": "^5.1.2",
+    "pino": "^9.12.0",
+    "pino-pretty": "^13.1.1",
+    "sqlite3": "^5.1.7",
+    "uuid": "^13.0.0",
+    "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.0",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^20.0.0",
+    "@types/xml2js": "^0.4.14",
+    "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
