--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-persist-client": "^5.90.7",
     "@types/nprogress": "^0.2.3",
+    "@types/react-window": "^1.8.8",
     "cli-progress": "^3.12.0",
     "hls.js": "^1.6.12",
     "nprogress": "^0.2.0",
@@ -25,7 +26,9 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "react-virtualized-auto-sizer": "^2.0.2",
+    "react-window": "^2.2.4"
   },
   "devDependencies": {
     "@eslint/js": "9.33.0",
