--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ani-web-server",
-  "version": "1.0.5",
+  "version": "1.0.9",
   "type": "commonjs",
   "scripts": {
     "start": "node dist/server.js",
-    "dev": "nodemon --watch \"**/*.ts\" --exec \"npx ts-node server.ts --dev\"",
+    "dev": "nodemon --watch '**/*.ts' --exec 'ts-node' server.ts --dev",
     "build": "tsc"
   },
   "dependencies": {
