--- a/package.json
+++ b/package.json
@@ -1,51 +1,27 @@
 {
   "name": "ani-web",
-  "private": true,
-  "version": "1.1.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "A web application for watching anime.",
+  "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"npm:server:dev\" \"vite\"",
-    "server:dev": "npm run dev --prefix server",
-    "build": "npm run build:server && vite build",
-    "build:server": "npm run build --prefix server",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "node server/dist/server.js",
-    "postinstall": "npm install --prefix server"
+    "postinstall": "npm install --prefix client && npm install --prefix server",
+    "build": "npm run build --prefix client && npm run build --prefix server",
+    "start": "concurrently \"npm run start --prefix server\" \"npm run start --prefix client\"",
+    "client": "npm start --prefix client",
+    "server": "npm start --prefix server",
+    "dev": "concurrently \"npm run dev --prefix server\" \"npm run dev --prefix client\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "anime",
+    "react",
+    "express",
+    "typescript"
+  ],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
-    "@tanstack/query-sync-storage-persister": "^5.90.7",
-    "@tanstack/react-query": "^5.90.2",
-    "@tanstack/react-query-persist-client": "^5.90.7",
-    "@types/nprogress": "^0.2.3",
-    "cli-progress": "^3.12.0",
-    "hls.js": "^1.6.12",
-    "nprogress": "^0.2.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-hot-toast": "^2.6.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "9.33.0",
-    "@types/cli-progress": "^3.11.5",
-    "@types/react": "19.1.10",
-    "@types/react-dom": "19.1.7",
-    "@vitejs/plugin-react": "5.0.0",
-    "baseline-browser-mapping": "^2.9.13",
-    "concurrently": "^9.2.1",
-    "eslint": "9.33.0",
-    "eslint-plugin-react-hooks": "5.2.0",
-    "eslint-plugin-react-refresh": "0.4.20",
-    "globals": "16.3.0",
-    "rimraf": "^6.0.1",
-    "typescript": "5.8.3",
-    "typescript-eslint": "8.39.1",
-    "vite": "^7.3.1"
-  },
-  "overrides": {
-    "node-gyp": "^10.0.0",
-    "@rollup/rollup-android-arm64": "4.45.1"
+    "concurrently": "^9.2.1"
   }
 }
