--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-
+# Node modules
 /node_modules
+/client/node_modules
 /server/node_modules
+
+# Build output
+/client/dist
+/server/dist
+
+# Databases
 *.db
