--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,8 @@
     "rimraf": "^6.0.1",
     "typescript": "5.8.3",
     "typescript-eslint": "8.39.1",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "vite-plugin-compression": "^0.5.1"
   },
   "overrides": {
     "node-gyp": "^10.0.0",
