--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "axios-retry": "^4.5.0",
     "cheerio": "^1.0.0-rc.12",
     "chokidar": "^4.0.3",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -21,11 +22,13 @@
     "node-cache": "^5.1.2",
     "pino": "^9.12.0",
     "pino-pretty": "^13.1.1",
+    "sharp": "^0.33.0",
     "sqlite3": "^5.1.7",
     "uuid": "^13.0.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.0",
     "@types/multer": "^2.0.0",
