--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start:prod": "vite preview",
+    "lighthouse": "lighthouse http://localhost:4173 --view"
   },
   "dependencies": {
     "@tanstack/query-sync-storage-persister": "^5.90.7",
@@ -39,6 +41,7 @@
     "rimraf": "^6.0.1",
     "typescript": "5.8.3",
     "typescript-eslint": "8.39.1",
+    "lighthouse": "^13.0.1",
     "vite": "^7.3.1",
     "vite-plugin-compression": "^0.5.1"
   },
